--- a/produtos.css
+++ b/produtos.css
@@ -74,8 +74,14 @@ header {
 .produtos li:hover p {
   font-size: 1em;
 }
-
-
+.produto-descricao, .tipo, .preco {
+   -webkit-touch-callout: none;  
+    -webkit-user-select: none;    
+    -khtml-user-select: none;    
+    -moz-user-select: none;       
+    -ms-user-select: none; 
+}
+/*rodapé*/
 footer {
   margin-top: 2%;
   height: 5%;
@@ -135,6 +141,7 @@ footer {
 @media screen and (max-width: 830px) {
   footer img {
     height:  120px;
+    
   }
 @media screen and (max-width: 580px) {
   footer img {
